# solana-compiled-projects

./: Cargo.toml
src/: lib.rs  pda.rs  phonebook.rs
test/: test.rs
